ocio-sys/src/bridge.hpp

// --- ColorSpaceTransform ---
void* ocio_color_space_transform_create(void);
void ocio_color_space_transform_destroy(void* handle);
void* ocio_color_space_transform_create_editable_copy(void* handle);
int ocio_color_space_transform_get_direction(void* handle);
void ocio_color_space_transform_set_direction(void* handle, int dir);
void ocio_color_space_transform_validate(void* handle);
void* ocio_color_space_transform_get_src(void* handle);
void ocio_color_space_transform_set_src(void* handle, const char* src);
void* ocio_color_space_transform_get_dst(void* handle);
void ocio_color_space_transform_set_dst(void* handle, const char* dst);
bool ocio_color_space_transform_get_data_bypass(void* handle);
void ocio_color_space_transform_set_data_bypass(void* handle, bool enabled);
// --- DisplayViewTransform ---
void* ocio_display_view_transform_create(void);
void ocio_display_view_transform_destroy(void* handle);
void* ocio_display_view_transform_create_editable_copy(void* handle);
int ocio_display_view_transform_get_direction(void* handle);
void ocio_display_view_transform_set_direction(void* handle, int dir);
void ocio_display_view_transform_validate(void* handle);
void* ocio_display_view_transform_get_src(void* handle);
void ocio_display_view_transform_set_src(void* handle, const char* name);
void* ocio_display_view_transform_get_display(void* handle);
void ocio_display_view_transform_set_display(void* handle, const char* display);
void* ocio_display_view_transform_get_view(void* handle);
void ocio_display_view_transform_set_view(void* handle, const char* view);
bool ocio_display_view_transform_get_looks_bypass(void* handle);
void ocio_display_view_transform_set_looks_bypass(void* handle, bool bypass);
bool ocio_display_view_transform_get_data_bypass(void* handle);
void ocio_display_view_transform_set_data_bypass(void* handle, bool bypass);
// --- ExponentTransform ---
void* ocio_exponent_transform_create(void);
void ocio_exponent_transform_destroy(void* handle);
void* ocio_exponent_transform_get_format_metadata(void* handle);
void* ocio_exponent_transform_get_format_metadata_v1(void* handle);
void* ocio_exponent_transform_get_format_metadata_v2(void* handle);
bool ocio_exponent_transform_equals(void* handle, void* other);
int ocio_exponent_transform_get_negative_style(void* handle);
void ocio_exponent_transform_set_negative_style(void* handle, int style);
// --- ExponentWithLinearTransform ---
void* ocio_exponent_with_linear_transform_create(void);
void ocio_exponent_with_linear_transform_destroy(void* handle);
void* ocio_exponent_with_linear_transform_get_format_metadata(void* handle);
void* ocio_exponent_with_linear_transform_get_format_metadata_v1(void* handle);
void* ocio_exponent_with_linear_transform_get_format_metadata_v2(void* handle);
bool ocio_exponent_with_linear_transform_equals(void* handle, void* other);
int ocio_exponent_with_linear_transform_get_negative_style(void* handle);
void ocio_exponent_with_linear_transform_set_negative_style(void* handle, int style);
// --- ExposureContrastTransform ---
void* ocio_exposure_contrast_transform_create(void);
void ocio_exposure_contrast_transform_destroy(void* handle);
void* ocio_exposure_contrast_transform_get_format_metadata(void* handle);
void* ocio_exposure_contrast_transform_get_format_metadata_v1(void* handle);
void* ocio_exposure_contrast_transform_get_format_metadata_v2(void* handle);
bool ocio_exposure_contrast_transform_equals(void* handle, void* other);
int ocio_exposure_contrast_transform_get_style(void* handle);
void ocio_exposure_contrast_transform_set_style(void* handle, int style);
double ocio_exposure_contrast_transform_get_exposure(void* handle);
void ocio_exposure_contrast_transform_set_exposure(void* handle, double exposure);
bool ocio_exposure_contrast_transform_is_exposure_dynamic(void* handle);
void ocio_exposure_contrast_transform_make_exposure_dynamic(void* handle);
void ocio_exposure_contrast_transform_make_exposure_non_dynamic(void* handle);
double ocio_exposure_contrast_transform_get_contrast(void* handle);
void ocio_exposure_contrast_transform_set_contrast(void* handle, double contrast);
bool ocio_exposure_contrast_transform_is_contrast_dynamic(void* handle);
void ocio_exposure_contrast_transform_make_contrast_dynamic(void* handle);
void ocio_exposure_contrast_transform_make_contrast_non_dynamic(void* handle);
double ocio_exposure_contrast_transform_get_gamma(void* handle);
void ocio_exposure_contrast_transform_set_gamma(void* handle, double gamma);
bool ocio_exposure_contrast_transform_is_gamma_dynamic(void* handle);
void ocio_exposure_contrast_transform_make_gamma_dynamic(void* handle);
void ocio_exposure_contrast_transform_make_gamma_non_dynamic(void* handle);
double ocio_exposure_contrast_transform_get_pivot(void* handle);
void ocio_exposure_contrast_transform_set_pivot(void* handle, double pivot);
double ocio_exposure_contrast_transform_get_log_exposure_step(void* handle);
void ocio_exposure_contrast_transform_set_log_exposure_step(void* handle, double logExposureStep);
double ocio_exposure_contrast_transform_get_log_mid_gray(void* handle);
void ocio_exposure_contrast_transform_set_log_mid_gray(void* handle, double logMidGray);
// --- FileTransform ---
void* ocio_file_transform_create(void);
void ocio_file_transform_destroy(void* handle);
void* ocio_file_transform_create_editable_copy(void* handle);
int ocio_file_transform_get_direction(void* handle);
void ocio_file_transform_set_direction(void* handle, int dir);
void ocio_file_transform_validate(void* handle);
void* ocio_file_transform_get_src(void* handle);
void ocio_file_transform_set_src(void* handle, const char* src);
void* ocio_file_transform_get_ccc_id(void* handle);
void ocio_file_transform_set_ccc_id(void* handle, const char* id);
int ocio_file_transform_get_cdl_style(void* handle);
void ocio_file_transform_set_cdl_style(void* handle, int arg0);
int ocio_file_transform_get_interpolation(void* handle);
void ocio_file_transform_set_interpolation(void* handle, int interp);
int ocio_file_transform_get_num_formats(void);
const char* ocio_file_transform_get_format_name_by_index(int index);
const char* ocio_file_transform_get_format_extension_by_index(int index);
bool ocio_file_transform_is_format_extension_supported(const char* extension);
// --- FixedFunctionTransform ---
void* ocio_fixed_function_transform_create(void);
void* ocio_fixed_function_transform_create_with_params(int style, const double* params, size_t num);
void ocio_fixed_function_transform_destroy(void* handle);
void* ocio_fixed_function_transform_get_format_metadata(void* handle);
void* ocio_fixed_function_transform_get_format_metadata_v1(void* handle);
void* ocio_fixed_function_transform_get_format_metadata_v2(void* handle);
bool ocio_fixed_function_transform_equals(void* handle, void* other);
int ocio_fixed_function_transform_get_direction(void* handle);
void ocio_fixed_function_transform_set_direction(void* handle, int dir);
int ocio_fixed_function_transform_get_style(void* handle);
void ocio_fixed_function_transform_set_style(void* handle, int style);
size_t ocio_fixed_function_transform_get_num_params(void* handle);
void ocio_fixed_function_transform_get_params(void* handle, void* params);
void ocio_fixed_function_transform_set_params(void* handle, const double* params, size_t num);
// --- GradingPrimaryTransform ---
void* ocio_grading_primary_transform_create(void);
void* ocio_grading_primary_transform_create_with_style(int style);
void ocio_grading_primary_transform_destroy(void* handle);
void* ocio_grading_primary_transform_get_format_metadata(void* handle);
void* ocio_grading_primary_transform_get_format_metadata_v1(void* handle);
void* ocio_grading_primary_transform_get_format_metadata_v2(void* handle);
bool ocio_grading_primary_transform_equals(void* handle, void* other);
int ocio_grading_primary_transform_get_style(void* handle);
void ocio_grading_primary_transform_set_style(void* handle, int style);
void* ocio_grading_primary_transform_get_value(void* handle);
void ocio_grading_primary_transform_set_value(void* handle, void* values);
bool ocio_grading_primary_transform_copy_value(void* handle, double* values, size_t len);
bool ocio_grading_primary_transform_set_value_from_f64(void* handle, const double* values, size_t len);
bool ocio_grading_primary_transform_is_dynamic(void* handle);
void ocio_grading_primary_transform_make_dynamic(void* handle);
void ocio_grading_primary_transform_make_non_dynamic(void* handle);