ocio-sys/src/lib.rs


    // --- ColorSpaceTransform ---
    pub fn ocio_color_space_transform_create() -> *mut c_void;
    pub fn ocio_color_space_transform_destroy(handle: *mut c_void);
    pub fn ocio_color_space_transform_create_editable_copy(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_color_space_transform_get_direction(handle: *mut c_void) -> i32;
    pub fn ocio_color_space_transform_set_direction(handle: *mut c_void, dir: i32) -> ();
    pub fn ocio_color_space_transform_validate(handle: *mut c_void) -> ();
    pub fn ocio_color_space_transform_get_src(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_color_space_transform_set_src(handle: *mut c_void, src: *const i8) -> ();
    pub fn ocio_color_space_transform_get_dst(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_color_space_transform_set_dst(handle: *mut c_void, dst: *const i8) -> ();
    pub fn ocio_color_space_transform_get_data_bypass(handle: *mut c_void) -> bool;
    pub fn ocio_color_space_transform_set_data_bypass(handle: *mut c_void, enabled: bool) -> ();

    // --- DisplayViewTransform ---
    pub fn ocio_display_view_transform_create() -> *mut c_void;
    pub fn ocio_display_view_transform_destroy(handle: *mut c_void);
    pub fn ocio_display_view_transform_create_editable_copy(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_display_view_transform_get_direction(handle: *mut c_void) -> i32;
    pub fn ocio_display_view_transform_set_direction(handle: *mut c_void, dir: i32) -> ();
    pub fn ocio_display_view_transform_validate(handle: *mut c_void) -> ();
    pub fn ocio_display_view_transform_get_src(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_display_view_transform_set_src(handle: *mut c_void, name: *const i8) -> ();
    pub fn ocio_display_view_transform_get_display(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_display_view_transform_set_display(handle: *mut c_void, display: *const i8) -> ();
    pub fn ocio_display_view_transform_get_view(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_display_view_transform_set_view(handle: *mut c_void, view: *const i8) -> ();
    pub fn ocio_display_view_transform_get_looks_bypass(handle: *mut c_void) -> bool;
    pub fn ocio_display_view_transform_set_looks_bypass(handle: *mut c_void, bypass: bool) -> ();
    pub fn ocio_display_view_transform_get_data_bypass(handle: *mut c_void) -> bool;
    pub fn ocio_display_view_transform_set_data_bypass(handle: *mut c_void, bypass: bool) -> ();

    // --- ExponentTransform ---
    pub fn ocio_exponent_transform_create() -> *mut c_void;
    pub fn ocio_exponent_transform_destroy(handle: *mut c_void);
    pub fn ocio_exponent_transform_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_exponent_transform_get_format_metadata_v1(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_exponent_transform_get_format_metadata_v2(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_exponent_transform_equals(handle: *mut c_void, other: *mut c_void) -> bool;
    pub fn ocio_exponent_transform_get_negative_style(handle: *mut c_void) -> i32;
    pub fn ocio_exponent_transform_set_negative_style(handle: *mut c_void, style: i32) -> ();

    // --- ExponentWithLinearTransform ---
    pub fn ocio_exponent_with_linear_transform_create() -> *mut c_void;
    pub fn ocio_exponent_with_linear_transform_destroy(handle: *mut c_void);
    pub fn ocio_exponent_with_linear_transform_get_format_metadata(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_exponent_with_linear_transform_get_format_metadata_v1(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_exponent_with_linear_transform_get_format_metadata_v2(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_exponent_with_linear_transform_equals(
        handle: *mut c_void,
        other: *mut c_void,
    ) -> bool;
    pub fn ocio_exponent_with_linear_transform_get_negative_style(handle: *mut c_void) -> i32;
    pub fn ocio_exponent_with_linear_transform_set_negative_style(
        handle: *mut c_void,
        style: i32,
    ) -> ();

    // --- ExposureContrastTransform ---
    pub fn ocio_exposure_contrast_transform_create() -> *mut c_void;
    pub fn ocio_exposure_contrast_transform_destroy(handle: *mut c_void);
    pub fn ocio_exposure_contrast_transform_get_format_metadata(handle: *mut c_void)
        -> *mut c_void;
    pub fn ocio_exposure_contrast_transform_get_format_metadata_v1(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_exposure_contrast_transform_get_format_metadata_v2(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_exposure_contrast_transform_equals(handle: *mut c_void, other: *mut c_void)
        -> bool;
    pub fn ocio_exposure_contrast_transform_get_style(handle: *mut c_void) -> i32;
    pub fn ocio_exposure_contrast_transform_set_style(handle: *mut c_void, style: i32) -> ();
    pub fn ocio_exposure_contrast_transform_get_exposure(handle: *mut c_void) -> f64;
    pub fn ocio_exposure_contrast_transform_set_exposure(handle: *mut c_void, exposure: f64) -> ();
    pub fn ocio_exposure_contrast_transform_is_exposure_dynamic(handle: *mut c_void) -> bool;
    pub fn ocio_exposure_contrast_transform_make_exposure_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_exposure_contrast_transform_make_exposure_non_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_exposure_contrast_transform_get_contrast(handle: *mut c_void) -> f64;
    pub fn ocio_exposure_contrast_transform_set_contrast(handle: *mut c_void, contrast: f64) -> ();
    pub fn ocio_exposure_contrast_transform_is_contrast_dynamic(handle: *mut c_void) -> bool;
    pub fn ocio_exposure_contrast_transform_make_contrast_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_exposure_contrast_transform_make_contrast_non_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_exposure_contrast_transform_get_gamma(handle: *mut c_void) -> f64;
    pub fn ocio_exposure_contrast_transform_set_gamma(handle: *mut c_void, gamma: f64) -> ();
    pub fn ocio_exposure_contrast_transform_is_gamma_dynamic(handle: *mut c_void) -> bool;
    pub fn ocio_exposure_contrast_transform_make_gamma_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_exposure_contrast_transform_make_gamma_non_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_exposure_contrast_transform_get_pivot(handle: *mut c_void) -> f64;
    pub fn ocio_exposure_contrast_transform_set_pivot(handle: *mut c_void, pivot: f64) -> ();
    pub fn ocio_exposure_contrast_transform_get_log_exposure_step(handle: *mut c_void) -> f64;
    pub fn ocio_exposure_contrast_transform_set_log_exposure_step(
        handle: *mut c_void,
        logExposureStep: f64,
    ) -> ();
    pub fn ocio_exposure_contrast_transform_get_log_mid_gray(handle: *mut c_void) -> f64;
    pub fn ocio_exposure_contrast_transform_set_log_mid_gray(
        handle: *mut c_void,
        logMidGray: f64,
    ) -> ();

    // --- FileTransform ---
    pub fn ocio_file_transform_create() -> *mut c_void;
    pub fn ocio_file_transform_destroy(handle: *mut c_void);
    pub fn ocio_file_transform_create_editable_copy(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_file_transform_get_direction(handle: *mut c_void) -> i32;
    pub fn ocio_file_transform_set_direction(handle: *mut c_void, dir: i32) -> ();
    pub fn ocio_file_transform_validate(handle: *mut c_void) -> ();
    pub fn ocio_file_transform_get_src(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_file_transform_set_src(handle: *mut c_void, src: *const i8) -> ();
    pub fn ocio_file_transform_get_ccc_id(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_file_transform_set_ccc_id(handle: *mut c_void, id: *const i8) -> ();
    pub fn ocio_file_transform_get_cdl_style(handle: *mut c_void) -> i32;
    pub fn ocio_file_transform_set_cdl_style(handle: *mut c_void, arg0: i32) -> ();
    pub fn ocio_file_transform_get_interpolation(handle: *mut c_void) -> i32;
    pub fn ocio_file_transform_set_interpolation(handle: *mut c_void, interp: i32) -> ();
    pub fn ocio_file_transform_get_num_formats() -> i32;
    pub fn ocio_file_transform_get_format_name_by_index(index: i32) -> *const i8;
    pub fn ocio_file_transform_get_format_extension_by_index(index: i32) -> *const i8;
    pub fn ocio_file_transform_is_format_extension_supported(extension: *const i8) -> bool;

    // --- FixedFunctionTransform ---
    pub fn ocio_fixed_function_transform_create() -> *mut c_void;
    pub fn ocio_fixed_function_transform_create_with_params(
        style: i32,
        params: *const f64,
        num: usize,
    ) -> *mut c_void;
    pub fn ocio_fixed_function_transform_destroy(handle: *mut c_void);
    pub fn ocio_fixed_function_transform_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_fixed_function_transform_get_format_metadata_v1(handle: *mut c_void)
        -> *mut c_void;
    pub fn ocio_fixed_function_transform_get_format_metadata_v2(handle: *mut c_void)
        -> *mut c_void;
    pub fn ocio_fixed_function_transform_equals(handle: *mut c_void, other: *mut c_void) -> bool;
    pub fn ocio_fixed_function_transform_get_direction(handle: *mut c_void) -> i32;
    pub fn ocio_fixed_function_transform_set_direction(handle: *mut c_void, dir: i32) -> ();
    pub fn ocio_fixed_function_transform_get_style(handle: *mut c_void) -> i32;
    pub fn ocio_fixed_function_transform_set_style(handle: *mut c_void, style: i32) -> ();
    pub fn ocio_fixed_function_transform_get_num_params(handle: *mut c_void) -> usize;
    pub fn ocio_fixed_function_transform_get_params(handle: *mut c_void, params: *mut c_void)
        -> ();
    pub fn ocio_fixed_function_transform_set_params(
        handle: *mut c_void,
        params: *const f64,
        num: usize,
    ) -> ();

    // --- GradingPrimaryTransform ---
    pub fn ocio_grading_primary_transform_create() -> *mut c_void;
    pub fn ocio_grading_primary_transform_create_with_style(style: i32) -> *mut c_void;
    pub fn ocio_grading_primary_transform_destroy(handle: *mut c_void);
    pub fn ocio_grading_primary_transform_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_grading_primary_transform_get_format_metadata_v1(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_grading_primary_transform_get_format_metadata_v2(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_grading_primary_transform_equals(handle: *mut c_void, other: *mut c_void) -> bool;
    pub fn ocio_grading_primary_transform_get_style(handle: *mut c_void) -> i32;
    pub fn ocio_grading_primary_transform_set_style(handle: *mut c_void, style: i32) -> ();
    pub fn ocio_grading_primary_transform_get_value(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_grading_primary_transform_set_value(handle: *mut c_void, values: *mut c_void)
        -> ();
    pub fn ocio_grading_primary_transform_copy_value(
        handle: *mut c_void,
        values: *mut f64,
        len: usize,
    ) -> bool;
    pub fn ocio_grading_primary_transform_set_value_from_f64(
        handle: *mut c_void,
        values: *const f64,
        len: usize,
    ) -> bool;
    pub fn ocio_grading_primary_transform_is_dynamic(handle: *mut c_void) -> bool;
    pub fn ocio_grading_primary_transform_make_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_grading_primary_transform_make_non_dynamic(handle: *mut c_void) -> ();
